--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "server": "nodemon index.js",
         "ketchup": "git fetch && git reset --hard origin/lecture",
         "up": "knex migrate:up",
-        "down": "knex migrate:down"
+        "down": "knex migrate:down",
+        "seed": "knex seed:run"
     },
     "repository": {
         "type": "git",
