--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "ketchup": "git fetch && git reset --hard origin/lecture",
         "up": "knex migrate:up",
         "down": "knex migrate:down",
-        "seed": "knex seed:run"
+        "seed": "knex seed:run",
+        "latest": "knex migrate:latest",
     },
     "repository": {
         "type": "git",
